src/objects/zqu__Field_Set_Config__c.object
<CustomObject>
    <fields>
        <fullName>zqu__Collapsible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collapsible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__FieldSetName__c</fullName>
        <label>Field Set Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__IsSingleColumn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Single Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__ObjectName__c</fullName>
        <label>Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__RecordType__c</fullName>
        <label>Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ShowHeader__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__ViewType__c</fullName>
        <label>View Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Field Set Config</label>
    <nameField>
        <label>Field Set Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Set Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>